samples/_failures_safe/1761454807_3bb15f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d75d8f0f.c: In function ‘main’:
./samples/SAFE/__tmp_d75d8f0f.c:136:26: error: missing terminating " character
  136 |     mat2.rows = read_int("Rows (1
      |                          ^~~~~~~~
./samples/SAFE/__tmp_d75d8f0f.c:136:5: error: expected expression at end of input
  136 |     mat2.rows = read_int("Rows (1
      |     ^~~~
./samples/SAFE/__tmp_d75d8f0f.c:136:17: error: too few arguments to function ‘read_int’
  136 |     mat2.rows = read_int("Rows (1
      |                 ^~~~~~~~
./samples/SAFE/__tmp_d75d8f0f.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d75d8f0f.c:136:5: error: expected declaration or statement at end of input
  136 |     mat2.rows = read_int("Rows (1
      |     ^~~~
